--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,8 +10,5 @@ Description: Using this package you can combine known site specific
     kinases and their substrates.
 License: GPL-2 | GPL-3
 Depends: R (>= 3.2.0)
-Imports: pvclust,
-    scales,
-    stats,
-    graphics
+Imports: pvclust
 Suggests: parallel
