--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,8 +10,9 @@ Description: Using this package you can combine known site specific
     kinases and their substrates.
 License: GPL-2 | GPL-3
 Depends: R (>= 3.2.0)
-Imports: pvclust,
-    stats
+Imports: pvclust
 Suggests: parallel,
-    knitr
-VignetteBuilder: knitr, ggplot2, graphics, scales
+    knitr,
+    ggplot2,
+    reshape2
+VignetteBuilder: knitr
