--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,6 @@ export(KSR.list)
 export(clust.expand)
 export(clustering)
 export(random.data)
+importFrom(stats,na.omit)
+importFrom(stats,runif)
 importFrom(tightClust,tight.clust)
